fleet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-website-service
spec:
  selector:
    app: my-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
